# data-portfolio

./: .gitignore  Analysis online vs offline learning in SQL.ipynb  Analysis_heathcare_ONLY_SQL.ipynb  Analyziing netflix movies.ipynb  Analyzing student's Mental Health_ONLY_PYTHON.ipynb  Healtcare_stroke_analysis.ipynb  README.md  pyproject.toml
